--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,6 +18,9 @@
         <p class="lead mt-4">
           No Account? <a href="/users/register">Register</a>
         </p>
+        <a href="https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=1654985474&redirect_uri=<%=redirect_url%>&state=123456789&scope=openid%20profile&nonce=helloWorld&prompt=consent&max_age=3600&ui_locales=zh-TW&bot_prompt=normal">
+          <img id="login-line" src="/img/btn_login_base.png" alt="" style="width: fit-content">
+        </a>
       </div>
     </div>
   </div>
