--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -234,6 +234,7 @@
             success: function (res) {
               if (res == 'error') alert('登入失敗3');
               auth();
+              document.location.href="/";
             }
           })
         }
