--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -112,6 +112,7 @@
                 <li class="auth"><a href="/users/logout">登出</a></li>
               </ul>
             </li>
+            <li class="non-auth"><a href="/profile/getprofile">getProfile</a></li>
             <li class="non-auth"><a href="/users/login">Sign in</a></li>
             <li class="non-auth banner-left">
               <input type="button" onclick="javascript:location.href='/users/register'" class="primary-btn"
