--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,9 @@
 <div class="container">
+    <p>userId: <span id="userId"></span></p>
     <p>displayName: <span id="displayName"></span></p>
+    <p>pictureUrl: <span id="pictureUrl"></span></p>
+    <p>statusMessage: <span id="statusMessage"></span></p>
+    <hr>
     <p>OS: <span id="OS"></span></p>
     <p>Language: <span id="Language"></span></p>
     <p>Version: <span id="Version"></span></p>
@@ -10,20 +14,21 @@
 <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
 
 <script>
+    liff.init(
+        data => {
+            liff.getProfile().then(profile => {
+                // 拿取profile
+                document.getElementById('userId').innerHTML = profile.userId
+                document.getElementById('displayName').innerHTML = profile.displayName
+                document.getElementById('pictureUrl').innerHTML = profile.pictureUrl
+                document.getElementById('statusMessage').innerHTML = profile.statusMessage
+            })
+        })
+
     liff.init({
         liffId: '1654985474-1K5daZn5'
     }).then(() => {
         //Success Callback
-        if (!liff.isLoggedIn()) {
-            liff.login({ redirectUri: "http://dadaeats.herokuapp.com/users/redirect" });
-        }
-        // 拿取個人資料
-        liff.getProfile()
-            .then((profile) => {
-                document.getElementById('displayName').innerHTML = profile.displayname;
-            }).catch((err) => {
-                console.log(err);
-            })
         // 拿取系統
         document.getElementById('OS').innerHTML = liff.getOS()
         // 拿取語系
