change to firebase

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,7 +99,7 @@
 		<div class="row">
 			<div class="col-lg-12 col-md-12 single-fact">
 				<h1 class="counter">
-					<%= userCount %>
+					<%= usersCount %>
 				</h1>
 				<p>使用人數</p>
 			</div>
