--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -197,10 +197,10 @@
 <div class="section-top-border container">
     <div class="progress-table-wrap">
         <div class="progress-table">
-            <img src="<%= imgSrc %>" alt="" width="100%">
+            <img src="<%= menus.bgImg %>" alt="" width="100%">
             <br>
             <br>
-            <h1 style="font-family: Microsoft JhengHei;"><%= title %></h1>
+            <h1 style="font-family: Microsoft JhengHei;"><%= menus.vendor_name %></h1>
             <hr>
             <% for(var i = 0;i < menus.menu_categories.length; i++){ %>
             <blockquote class="generic-blockquote">
