change to firebase

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1229,20 +1229,24 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .progress-table .user-pick {
-  width: 10%;
+  width: 5%;
   padding-left: 5px;
 }
 
 .progress-table .user-name {
-  width: 25%;
+  width: 10%;
 }
 
 .progress-table .user-account {
-  width: 30%;
+  width: 10%;
+}
+
+.progress-table .user-password {
+  width: 70%;
 }
 
 .progress-table .user-dadacoin {
-  width: 30%;
+  width: 5%;
 }
 
 .progress-table .user-orders {
@@ -1279,7 +1283,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
 }
 
-.progress-table .table-head .serial, .progress-table .table-head .country, .progress-table .table-head .visit, .progress-table .table-head .percentage, .progress-table .table-head .user-pick, .progress-table .table-head .user-name, .progress-table .table-head .user-account, .progress-table .table-head .user-dadacoin, .progress-table .table-head .user-orders, .progress-table .table-head .user-sum, .progress-table .table-head .user-confirmed, .progress-table .table-head .user-payment {
+.progress-table .table-head .serial, .progress-table .table-head .country, .progress-table .table-head .visit, .progress-table .table-head .percentage, .progress-table .table-head .user-pick, .progress-table .table-head .user-name, .progress-table .table-head .user-account, .progress-table .table-head .user-password, .progress-table .table-head .user-dadacoin, .progress-table .table-head .user-orders, .progress-table .table-head .user-sum, .progress-table .table-head .user-confirmed, .progress-table .table-head .user-payment {
   color: #222222;
   line-height: 40px;
   text-transform: uppercase;
@@ -1292,7 +1296,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
 }
 
-.progress-table .table-row .serial, .progress-table .table-row .country, .progress-table .table-row .visit, .progress-table .table-row .percentage, .progress-table .table-row .user-pick, .progress-table .table-row .user-name, .progress-table .table-row .user-account, .progress-table .table-row .user-dadacoin, .progress-table .table-row .user-orders, .progress-table .table-row .user-sum, .progress-table .table-row .user-orders, .progress-table .table-row .user-confirmed, .progress-table .table-row .user-payment {
+.progress-table .table-row .serial, .progress-table .table-row .country, .progress-table .table-row .visit, .progress-table .table-row .percentage, .progress-table .table-row .user-pick, .progress-table .table-row .user-name, .progress-table .table-row .user-account, .progress-table .table-row .user-password, .progress-table .table-row .user-dadacoin, .progress-table .table-row .user-orders, .progress-table .table-row .user-sum, .progress-table .table-row .user-orders, .progress-table .table-row .user-confirmed, .progress-table .table-row .user-payment {
   display: flex;
   /* align-items: center; */
 }
