--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,7 +15,7 @@
 
 <script>
     liff.init({
-        liffId: '1654985474-1K5daZn5'
+        liffId: "<%= process.env.liffId %>"
     }).then(() => {
         //Success Callback
         liff.getProfile()
