--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -311,7 +311,7 @@
                       },
                       success: function (res) {
                         console.log('login');
-                        location.reload();
+                        // location.reload();
                       }
                     })
 
