--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -312,6 +312,7 @@
                       success: function (res) {
                         console.log('login');
                         // location.reload();
+                        auth();
                       }
                     })
 
