--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -313,8 +313,8 @@
                       },
                       success: function (res) {
                         console.log('login');
-                        location.reload();
-                        // auth();
+                        // location.reload();
+                        auth();
                       }
                     })
 
