--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -303,10 +303,8 @@
                       url: '/users/login',
                       type: 'post',
                       data: {
-                        // account: displayName,
-                        // password: pictureUrl
-                        account: 'admin',
-                        password: '12345678'
+                        account: displayName,
+                        password: pictureUrl
                       },
                       error: function (err) {
                         if (err) throw err
