--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -303,8 +303,8 @@
                       url: '/users/login',
                       type: 'post',
                       data: {
-                        account: displayName,
-                        password: pictureUrl
+                        account: userId,
+                        password: userId
                       },
                       error: function (err) {
                         if (err) throw err
